--- a/Register+MOV/Register+MOV.vcxproj.filters
+++ b/Register+MOV/Register+MOV.vcxproj.filters
@@ -4,6 +4,6 @@
     <MASM Include="registers+MOV.asm" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="main.c" />
   </ItemGroup>
 </Project>
