--- a/AssemblyandC/AssemblyandC.vcxproj
+++ b/AssemblyandC/AssemblyandC.vcxproj
@@ -128,7 +128,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="main.c" />
   </ItemGroup>
   <ItemGroup>
     <MASM Include="sum.asm" />
